added preliminary discord link

--- a/public/bof/event142/links/index.html
+++ b/public/bof/event142/links/index.html
@@ -746,7 +746,9 @@ href="https://cdn.datatables.net/v/dt/dt-2.1.8/af-2.7.0/b-3.1.2/b-colvis-3.1.2/b
 
 <div>
 	<p>
-		Below is my attempt at a powerful and configurable link list. It is a work in progress, so i ask that you be patient with me. If you have any suggestions, please let me know on my discord server
+		Below is my attempt at a powerful and configurable link list. It is a work in progress, so I ask that you be patient with me. If you have any suggestions, please let me know on my Discord server
+		<a href="https://discord.gg/2FcTGpME" target="_blank" rel="noopener noreferrer">The 16th Sanctuary</a>.
+
 	</p>
 </div>
 
