--- a/public/bof/event146/index.html
+++ b/public/bof/event146/index.html
@@ -926,7 +926,10 @@ table {
 
 	</div>
 </div>
-<a href=links>test links</a>
+<h1>
+	<a href=links class="large-text">LINK TABLE HERE</a>
+</h1>
+site still in progress
 
 	<div class="image-banner">
 		<img alt="Banner" class="mx-auto" src="https://manbow.nothing.sh/event/images/146.jpg" fetchpriority="high" loading="eager">
