--- a/public/bof/event146/team29/index.html
+++ b/public/bof/event146/team29/index.html
@@ -860,6 +860,8 @@ table {
 			
 				
 			
+				
+			
 		
 	
 
@@ -867,6 +869,68 @@ table {
 		
 
 		
+
+		
+			
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	
+
+
+
+
+
+<div class="mb-3 paige-page paige-published w-100">
+	
+		<p class="mb-0 paige-title text-center">
+			<a href="/bof/event146/team29/songdstring262/">¡Viva la SPEEDCORE!</a>
+		</p>
+	
+
+	
+		<p class="mb-0 paige-description text-center">THE BEAT vs THE WIZARD</p>
+	
+
+	
+		<p class="fst-italic mb-0 paige-summary text-center">Salsa y Speedcore</p>
+	
+
+	
+
+	
+
+	
+
+	
+
+	
+</div>
 
 		
 			
