--- a/public/bof/event146/team30/index.html
+++ b/public/bof/event146/team30/index.html
@@ -862,6 +862,8 @@ table {
 			
 				
 			
+				
+			
 		
 	
 
@@ -915,6 +917,68 @@ table {
 
 	
 		<p class="mb-0 paige-description text-center">TARO</p>
+	
+
+	
+		<p class="fst-italic mb-0 paige-summary text-center">HARDCORE</p>
+	
+
+	
+
+	
+
+	
+
+	
+
+	
+</div>
+
+		
+			
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	
+
+
+
+
+
+<div class="mb-3 paige-page paige-published w-100">
+	
+		<p class="mb-0 paige-title text-center">
+			<a href="/bof/event146/team30/songdstring263/">Iustitia</a>
+		</p>
+	
+
+	
+		<p class="mb-0 paige-description text-center">TUONELA</p>
 	
 
 	
