--- a/public/bof/event146/team30/songdstring75/index.html
+++ b/public/bof/event146/team30/songdstring75/index.html
@@ -923,7 +923,7 @@ table {
 
             
                 <p class="mb-0 text-center text-secondary" id="paige-prev">
-                    &lsaquo; <a class="link-secondary" href="//localhost:1313/bof/event146/team30/songdstring35/">Exipration</a>
+                    &lsaquo; <a class="link-secondary" href="//localhost:1313/bof/event146/team30/songdstring263/">Iustitia</a>
                 </p>
             
         </div>
