--- a/public/bof/event142/links/index.html
+++ b/public/bof/event142/links/index.html
@@ -32436,31 +32436,40 @@ href="https://cdn.datatables.net/v/dt/dt-2.1.8/af-2.7.0/b-3.1.2/b-colvis-3.1.2/b
 	</tbody>
 </table>
  <script>
-												  $(document).ready(function () {
-												    var table = $('#linkTable').DataTable({
-												      dom: 'Bfrtip', 
-												      buttons: [
-												        {
-												          extend: 'colvis',
-												          postfixButtons: [ 'colvisRestore' ],
-												          collectionLayout: 'fixed two-column'
-												        }
-												      ]
-												    });
+  $(document).ready(function () {
+    var table = $('#linkTable').DataTable({
+      layout: {
+        topstart: 'pageLength',
+        search: {
+          input: {
+            attributes: {
+              placeholder: 'Search all'
+            }
+          }
+        }
+      },
+      buttons: [
+        {
+          extend: 'colvis',
+          postfixButtons: ['colvisRestore'],
+          collectionLayout: 'fixed two-column'
+        }
+      ]
+    });
 
-												    
-												    $('#linkTable thead tr:eq(1) th').each(function (i) {
-												      $('input', this).on('keyup change', function () {
-												        if (table.column(i).search() !== this.value) {
-												          table
-												            .column(i)
-												            .search(this.value)
-												            .draw();
-												        }
-												      });
-												    });
-												  });
-												</script>
+    
+    $('#linkTable thead tr:eq(1) th').each(function (i) {
+      $('input', this).on('keyup change', function () {
+        if (table.column(i).search() !== this.value) {
+          table
+            .column(i)
+            .search(this.value)
+            .draw();
+        }
+      });
+    });
+  });
+</script>
 
 
 
