--- a/public/bof/event146/team136/index.html
+++ b/public/bof/event146/team136/index.html
@@ -858,6 +858,8 @@ table {
 			
 				
 			
+				
+			
 		
 	
 
@@ -915,6 +917,68 @@ table {
 
 	
 		<p class="fst-italic mb-0 paige-summary text-center">Ambient</p>
+	
+
+	
+
+	
+
+	
+
+	
+
+	
+</div>
+
+		
+			
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	
+
+
+
+
+
+<div class="mb-3 paige-page paige-published w-100">
+	
+		<p class="mb-0 paige-title text-center">
+			<a href="/bof/event146/team136/songdstring249/">Tulzscha</a>
+		</p>
+	
+
+	
+		<p class="mb-0 paige-description text-center">初雲CLoudie vs. watch</p>
+	
+
+	
+		<p class="fst-italic mb-0 paige-summary text-center">Mainstream Hardcore</p>
 	
 
 	
