--- a/public/bof/event146/team157/index.html
+++ b/public/bof/event146/team157/index.html
@@ -916,7 +916,7 @@ table {
 	
 
 	
-		<p class="fst-italic mb-0 paige-summary text-center">AMSTERDAM / ENERGEITC / UPLIFTING TRANCE</p>
+		<p class="fst-italic mb-0 paige-summary text-center">AMSTERDAM / ENERGETIC / UPLIFTING TRANCE</p>
 	
 
 	
