--- a/public/bof/event146/team160/index.html
+++ b/public/bof/event146/team160/index.html
@@ -858,6 +858,8 @@ table {
 			
 				
 			
+				
+			
 		
 	
 
@@ -865,6 +867,68 @@ table {
 		
 
 		
+
+		
+			
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	
+
+
+
+
+
+<div class="mb-3 paige-page paige-published w-100">
+	
+		<p class="mb-0 paige-title text-center">
+			<a href="/bof/event146/team160/songdstring260/">I ate sand as a child and i think that impacted me mentally</a>
+		</p>
+	
+
+	
+		<p class="mb-0 paige-description text-center">LEVenhuk</p>
+	
+
+	
+		<p class="fst-italic mb-0 paige-summary text-center">…I hate keysounding.</p>
+	
+
+	
+
+	
+
+	
+
+	
+
+	
+</div>
 
 		
 			
