--- a/public/bof/event146/team23/index.html
+++ b/public/bof/event146/team23/index.html
@@ -863,6 +863,8 @@ table {
 			
 				
 			
+				
+			
 		
 	
 
@@ -982,6 +984,68 @@ table {
 
 	
 		<p class="fst-italic mb-0 paige-summary text-center">ORCHESTRAL ELECTRONIC HYBRID</p>
+	
+
+	
+
+	
+
+	
+
+	
+
+	
+</div>
+
+		
+			
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	
+
+
+
+
+
+<div class="mb-3 paige-page paige-published w-100">
+	
+		<p class="mb-0 paige-title text-center">
+			<a href="/bof/event146/team23/songdstring248/">POV: Sekiro at 3am</a>
+		</p>
+	
+
+	
+		<p class="mb-0 paige-description text-center">Medium × Small Meeks</p>
+	
+
+	
+		<p class="fst-italic mb-0 paige-summary text-center">Still Can’t Beat Isshin</p>
 	
 
 	
