--- a/public/bof/event146/team30/songdstring35/index.html
+++ b/public/bof/event146/team30/songdstring35/index.html
@@ -917,7 +917,7 @@ table {
         <div class="mb-3" id="paige-prev-next">
             
                 <p class="mb-0 text-center text-secondary" id="paige-next">
-                    <a class="link-secondary" href="//localhost:1313/bof/event146/team30/songdstring75/">ペイルフラッド</a> &rsaquo;
+                    <a class="link-secondary" href="//localhost:1313/bof/event146/team30/songdstring263/">Iustitia</a> &rsaquo;
                 </p>
             
 
