--- a/public/bof/event146/team65/index.html
+++ b/public/bof/event146/team65/index.html
@@ -787,6 +787,8 @@
 			
 				
 			
+				
+			
 		
 	
 
@@ -844,6 +846,68 @@
 
 	
 		<p class="fst-italic mb-0 paige-summary text-center">FRENCHCORE</p>
+	
+
+	
+
+	
+
+	
+
+	
+
+	
+</div>
+
+		
+			
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	
+
+
+
+
+
+<div class="mb-3 paige-page paige-published w-100">
+	
+		<p class="mb-0 paige-title text-center">
+			<a href="/bof/event146/team65/song274/">Je Moeder</a>
+		</p>
+	
+
+	
+		<p class="mb-0 paige-description text-center">Leur</p>
+	
+
+	
+		<p class="fst-italic mb-0 paige-summary text-center">Drum &amp; Ethnic</p>
 	
 
 	
