--- a/public/bof/event146/team65/song223/index.html
+++ b/public/bof/event146/team65/song223/index.html
@@ -839,7 +839,7 @@
 
             
                 <p class="mb-0 text-center text-secondary" id="paige-prev">
-                    &lsaquo; <a class="link-secondary" href="//localhost:1313/bof/event146/team65/song203/">[Nevihta]</a>
+                    &lsaquo; <a class="link-secondary" href="//localhost:1313/bof/event146/team65/song274/">Je Moeder</a>
                 </p>
             
         </div>
